--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="results-box">
         <h1 id="results">Results</h1>
         <p id="liveScore">Player 0 - 0 Computer</p>
+        <p id='result-message'></p>
     </div>
 </body>
 
@@ -27,8 +28,9 @@ function getComputerChoice() {
 const rock = document.querySelector('#rock')
 const paper = document.querySelector('#paper')
 const scissors = document.querySelector('#scissors')
-
 const liveScore = document.querySelector('#liveScore')
+const resultMessageElement = document.querySelector('#result-message');
+
 
 let playerSelection
 let computerSelection
@@ -82,53 +84,51 @@ let playerScore = 0
 let computerScore = 0
 
 function playRound() {
+    let resultMessage
 
     if (playerSelection === computerSelection){
-        tie.textContent = ("It's a tie -- you both chose "+ playerSelection + "!")
-        resultsBox.appendChild(tie);
+        resultMessage = ("It's a tie -- you both chose "+ playerSelection + "!")
     }
 
     else if (playerSelection === "rock" && computerSelection === "scissors"){
         playerScore++;
-        win.textContent = ("You win!");
-        resultsBox.appendChild(win);
+        resultMessage = ("You win!");
     }
 
     else if (playerSelection === "rock" && computerSelection === "paper"){
         computerScore++;
-        lose.textContent = ("You lose...");
-        resultsBox.appendChild(lose);
+        resultMessage = ("You lose...");
     }
 
     else if (playerSelection === "paper" && computerSelection === "rock"){
         playerScore++;
-        win.textContent = ("You win!");
-        resultsBox.appendChild(win);
+        resultMessage = ("You win!");
     }
 
     else if (playerSelection === "paper" && computerSelection === "scissors"){
         computerScore++;
-        lose.textContent = ("You lose...");
-        resultsBox.appendChild(lose);
+        resultMessage = ("You lose...");
     }
 
     else if (playerSelection === "scissors" && computerSelection === "rock"){
         computerScore++;
-        lose.textContent = ("You lose...");
-        resultsBox.appendChild(lose);
-    }
+        resultMessage = ("You lose...");
+        }
 
     else if (playerSelection === "scissors" && computerSelection === "paper"){
         playerScore++;
-        win.textContent = ("You win!");
-        resultsBox.appendChild(win);
+        resultMessage = ("You win!");
     }
 
     else {
-        error.textContent = "You must have entered something wrong..."
-        resultsBox.appendChild(error);
+        resultMessage = "You must have entered something wrong..."
     }
-;
+
+    const resultElement = resultMessage === "You win!" ? win :
+                          resultMessage === "It's a tie -- you both chose " + playerSelection + "!" ? tie :
+                          resultMessage === "You lose..." ? lose : error;
+
+    resultMessageElement.textContent = resultMessage;
 
 }
 
